# WorkflowOrchestrator

./: .gitignore  config.py  main.py  requirements.txt
.builder/: project_state.json
workflow_orchestrator/: .gitignore  README.md  __init__.py  cli.py  config.py  engine.py  main.py  models.py  pyproject.toml  reports.py  requirements.txt  scanner.py  scheduler.py
workflow_orchestrator/adapters/: __init__.py
workflow_orchestrator/builder/: __init__.py  architecture_generator.py  artifact_validator.py  completion_checker.py  data_models.py  dependency_graph.py  deployment_planner.py  documentation_generator.py  execution_planner.py  progress_tracker.py  project_builder.py  project_classifier.py  project_initializer.py  provider_assignment.py  requirement_extractor.py  resume_manager.py  roadmap_generator.py  rollback_manager.py  state_manager.py  task_graph_builder.py  verification_manager.py  workflow_generator.py
workflow_orchestrator/cli/: __init__.py
workflow_orchestrator/config/: __init__.py  backward_compat.py  config_manager.py  profile_loader.py  settings.py  validators.py
workflow_orchestrator/context/: __init__.py  context_budget.py  context_builder.py  context_cache.py  context_compressor.py  context_engine.py  context_index.py  context_layers.py  context_models.py  context_selector.py  context_snapshot.py
workflow_orchestrator/contracts/: __init__.py  contract_diff.py  contract_history.py  contract_manager.py  contract_rules.py  contract_schema.py  contract_snapshot.py  contract_validator.py  project_contract.py
workflow_orchestrator/core/: __init__.py  artifact_manager.py  benchmark.py  bootstrap.py  capability_registry.py  event_bus.py  kernel.py  lifecycle.py  logger.py  plugin_engine.py  security.py  service_registry.py  shutdown.py  state_engine.py  telemetry.py  version_matrix.py  workspace_manager.py
workflow_orchestrator/data/: config.json
workflow_orchestrator/decision/: __init__.py  agent_selector.py  decision_context.py  decision_engine.py  decision_models.py  decision_rules.py  goal_analyzer.py  phase_manager.py  provider_selector.py  routing_policy.py  workflow_selector.py
workflow_orchestrator/domain/: __init__.py
workflow_orchestrator/execution/: __init__.py  dependency_resolver.py  execution_context.py  execution_engine.py  execution_queue.py  retry_engine.py  step_executor.py  workflow_compiler.py  workflow_engine.py  workflow_loader.py  workflow_validator.py
workflow_orchestrator/integrations/: __init__.py  agent_detector.py  api_manager.py  browser_manager.py  cli_manager.py  credential_manager.py  dependency_detector.py  desktop_manager.py  environment_detector.py  health_monitor.py  mcp_manager.py  provider_configuration.py  provider_detector.py  provider_installer.py  provider_manager.py  tool_detector.py  transport_factory.py  update_manager.py  version_manager.py  workspace_detector.py
workflow_orchestrator/intelligence/: __init__.py  agent.py  agent_registry.py  capability_matcher.py  context_budget.py  models.py  planner.py  prompt_builder.py  provider.py  provider_registry.py  router.py  session.py
workflow_orchestrator/knowledge/: __init__.py  knowledge_base.py  knowledge_index.py  knowledge_loader.py  knowledge_models.py  knowledge_search.py  knowledge_store.py
(+902 files in other folders)
